# LibLunaScript

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Generate.py  Main.cpp  Main_Release.cpp  README.md  Template.cpp  oldParser.cpp  template.cpp  test.ast.json  test.ll  test.lls  test.lls.ast  test.llsb  test.lsasm  test.lsobj  test2.lls  test_extra.lls
.github/workflows/: check-commit-message.yml  clang-format-check.yml
CMake_Build_Platforms/: Linux.cmake  Windows.cmake
cmake/: LocalLibrary.cmake
languages/: es-es.json
libs/binarys/: libos.lib
libs/include/liblunascript/: Assembler.h  Compiler.h  Lsvm.h
libs/include/libos/: DataType.h  Defines.h  FileIO.h  NetIO.h  Window.h
old_code/assembler/: Assembler.h  AssemblerAPI.cpp  Lexer.h
old_code/lsvm/: Lsvm.h  VirtualMachine.h
plugin/: extension.js  package-lock.json  package.json
plugin/syntaxes/: lunascript.tmLanguage.json
plugin/test code/: test.lls
plugins/LunaScriptEXT/: LunaScriptEXT.csproj
plugins/LunaScriptEXT/src/Client/: ClassTemplate.txt  GenFormats.py  LunaScriptClassifier.cs  LunaScriptFormatter.cs  LunaScriptTagger.cs  SyntaxDefinitions.cs
plugins/LunaScriptEXT/src/Share/: Constants.cs
plugins/LunaScript_VSCode/: .clang-format  package-lock.json  package.json
plugins/LunaScript_VSCode/client/: package-lock.json  package.json
plugins/LunaScript_VSCode/client/src/: extension.ts
plugins/LunaScript_VSCode/server/: package-lock.json  package.json
plugins/LunaScript_VSCode/server/src/: server.ts
plugins/LunaScript_VSCode/syntaxes/: lunascript.tmLanguage.json
plugins/LunaScript_VisualStudio/: LunaScriptEXT.csproj  LunaScriptEXT.sln  UpgradeLog.htm  source.extension.vsixmanifest
plugins/LunaScript_VisualStudio/Properties/: AssemblyInfo.cs
plugins/LunaScript_VisualStudio/src/Client/: LunaScriptClassifier.cs  LunaScriptTagger.cs
src/: API.cpp  AST.h  CMakeLists.txt  Cmake.h  Cmake.h.in
src/application/: Cmake.h  Cmake.h.in  IO.cpp  IO.h  IO.hpp  Main.cpp  Test.cpp
src/assembler/: AssemblerAPI.cpp  Lexer.cpp  Lexer.h  LunaBytecode.h
src/compiler/: AST.h  CodeGen.cpp  CompilerAPI.cpp  IO.cpp  IO.h  Json.cpp  Lexer.cpp  Lexer.h  Lexer_old.cpp  Main.cpp  Parser.cpp  Parser.h  Test.cpp
src/compiler/back/: ByteCodeGen.cpp  ByteCodeGen.h  CodeGen.cpp  CodeGen.h  DebugGen.cpp  IRCodeGen.cpp  IRCodeGen.h  InternalIRCodeGen.h
src/compiler/front/: Json.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/extend_std/: Iterator.h  LookUpTable.h  Vector.h
src/front/: CMakeLists.txt  Parser.cpp  Parser.h
src/lib/: AST.h  CompilerAPI.cpp
src/lib/back/: DebugGen.cpp  IRCodeGen.cpp  LunaBytecode.h
src/lib/front/: Json.cpp  Parser.cpp  Parser.h
src/lsvm/: CPU.h  VirtualMachine.cpp  VirtualMachine.h  VmAPI.cpp
src/parser/: CMakeLists.txt  Json.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Translator.cpp  Translator.h
src/share/: LunaBytecode.h
src/share/extend_std/: Iterator.h  LookUpTable.h  Vector.h
src/util/: ComplierString.hpp  Iterator.h  LookUpTable.h
tests/ast/func/common/: parse_main_func.lls.ast  parse_main_with_another_function_call.lls.ast  parse_main_with_another_function_call_with_arg.lls.ast  parse_main_with_another_function_no_call.lls.ast  parse_main_with_no_return.lls.ast  parse_main_with_no_return_used_return.lls.ast
tests/ast/module/: module_alone.lls.ast  module_import_test_base.lls.ast
tests/ast/var/binary/: parse_var_binary_expr_1.lls.ast  parse_var_binary_expr_10.lls.ast  parse_var_binary_expr_11.lls.ast  parse_var_binary_expr_12.lls.ast  parse_var_binary_expr_13.lls.ast  parse_var_binary_expr_14.lls.ast  parse_var_binary_expr_15.lls.ast  parse_var_binary_expr_16.lls.ast  parse_var_binary_expr_17.lls.ast  parse_var_binary_expr_18.lls.ast  parse_var_binary_expr_2.lls.ast  parse_var_binary_expr_3.lls.ast  parse_var_binary_expr_4.lls.ast  parse_var_binary_expr_5.lls.ast  parse_var_binary_expr_6.lls.ast  parse_var_binary_expr_7.lls.ast  parse_var_binary_expr_8.lls.ast  parse_var_binary_expr_9.lls.ast
tests/ast/var/no_value/: parse_var_float32_no_value.lls.ast  parse_var_float64_no_value.lls.ast  parse_var_int16_no_value.lls.ast  parse_var_int32_no_value.lls.ast  parse_var_int64_no_value.lls.ast  parse_var_int8_no_value.lls.ast  parse_var_uint16_no_value.lls.ast  parse_var_uint32_no_value.lls.ast  parse_var_uint64_no_value.lls.ast  parse_var_uint8_no_value.lls.ast
tests/ast/var/value/: parse_var_float32_with_value.lls.ast  parse_var_float64_with_value.lls.ast  parse_var_int16_with_value.lls.ast  parse_var_int32_with_value.lls.ast  parse_var_int64_with_value.lls.ast  parse_var_int8_with_value.lls.ast  parse_var_uint16_with_value.lls.ast  parse_var_uint32_with_value.lls.ast  parse_var_uint64_with_value.lls.ast  parse_var_uint8_with_value.lls.ast
tests/src/func/bad_syntax/: func_bad_syntax_1.lls  func_bad_syntax_10.lls  func_bad_syntax_2.lls  func_bad_syntax_3.lls  func_bad_syntax_4.lls  func_bad_syntax_5.lls  func_bad_syntax_6.lls  func_bad_syntax_7.lls  func_bad_syntax_8.lls  func_bad_syntax_9.lls
tests/src/func/common/: parse_main_func.lls  parse_main_with_another_function_call.lls  parse_main_with_another_function_call_with_arg.lls  parse_main_with_another_function_no_call.lls  parse_main_with_no_return.lls  parse_main_with_no_return_used_return.lls
tests/src/lang/: en_gb.lls  hu_hu.lls  test.fr.lls  test.gb-en.lls
tests/src/module/: module_alone.lls  module_import_test_base.lls  module_import_test_called.lls
tests/src/var/bad_syntax/: bad_syntax_1.lls  bad_syntax_10.lls  bad_syntax_11.lls  bad_syntax_12.lls  bad_syntax_13.lls  bad_syntax_14.lls  bad_syntax_15.lls  bad_syntax_16.lls  bad_syntax_2.lls  bad_syntax_3.lls  bad_syntax_4.lls  bad_syntax_5.lls  bad_syntax_6.lls  bad_syntax_7.lls  bad_syntax_8.lls  bad_syntax_9.lls
tests/src/var/binary/: parse_var_binary_expr_1.lls  parse_var_binary_expr_10.lls  parse_var_binary_expr_11.lls  parse_var_binary_expr_12.lls  parse_var_binary_expr_13.lls  parse_var_binary_expr_14.lls  parse_var_binary_expr_15.lls  parse_var_binary_expr_16.lls  parse_var_binary_expr_17.lls  (+9 more)
(+160 files in other folders)
